--- a/style.css
+++ b/style.css
@@ -42,9 +42,11 @@ select:focus {
 }
 #univ-type{
     margin-bottom: 20px;
+    max-width: 250px;
 }
 #course-numbers{
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    max-width: 250px;
 }
 #convert-btn, #reset-btn{
     color: white;
@@ -56,22 +58,14 @@ select:focus {
     font-size: 20px;
     font-weight: 700;
 }
-#convert-btn:hover, #reset-btn:hover{
-    background-color: #265077;
-}
-#convert-btn:active,  #add-btn:active, #reset-btn:active {
-    transform: scale(0.98);
-    /* Scaling button to 0.98 to its original size */
-    box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24);
-    /* Lowering the shadow */
-}
 .grade {
-    width: 75px;;
+    width: 50px;;
     font-size: 25px;
     text-align: center;
 }
 .grade-row {
     display: flex;
+    justify-content: space-between;
     margin-bottom: 15px;
 }
 .grade-choice {
@@ -104,12 +98,22 @@ select option {
 
 .credit {
     margin-left: 20px;
-    width: 280px;
+    max-width: 200px;
 }
 .buttons {
     display: flex;
-    justify-content:space-between;
-    gap: 20px;
+    justify-content:center;
+    gap: 10px;
+    margin-top: 10px;
+}
+#convert-btn:hover, #reset-btn:hover{
+    background-color: #265077;
+}
+#convert-btn:active,  #add-btn:active, #reset-btn:active {
+    transform: scale(0.98);
+    /* Scaling button to 0.98 to its original size */
+    box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24);
+    /* Lowering the shadow */
 }
 input[type="radio"]{
     display: none;
@@ -156,13 +160,14 @@ input[name="credit"]+label {
     margin-left: 20px;
 }
 h1{
-    font-size: 45px;
+    font-size: 40px;
     margin: 0;
 }
 .gpatext{
     color: #15DB95;
     font-weight: 700;
     font-size: 32px;
+    display: inline;
 }
 footer {
     margin-top: 30px;;
